fix z-index

--- a/web/wp-content/themes/cncf-theme/source/scss/core/_entry-content.scss
+++ b/web/wp-content/themes/cncf-theme/source/scss/core/_entry-content.scss
@@ -223,5 +223,6 @@
     .front-hero-small {
         font-size: 1.35em;
         font-weight: 500;
+        z-index: 100;
     }
 }
